[gd_scene load_steps=7 format=3 uid="uid://bc80js0lqq2c"]

[ext_resource type="Script" path="res://scripts/download.gd" id="1_m28pn"]
[ext_resource type="Texture2D" uid="uid://bft8p2ejikb81" path="res://assets/sprites/download.png" id="1_s8q2g"]
[ext_resource type="PackedScene" uid="uid://g4fkg6rnpgqr" path="res://scenes/Return.tscn" id="2_1a8uc"]
[ext_resource type="PackedScene" uid="uid://bvqawkcoycf3e" path="res://scenes/MoveableItem.tscn" id="2_rpyni"]
[ext_resource type="PackedScene" uid="uid://dx8x2wygdl6xn" path="res://scenes/Bad.tscn" id="3_hk41l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xg1se"]
radius = 18.0

[node name="Download" type="Area2D" groups=["download"]]
scale = Vector2(0.5, 0.5)
collision_layer = 0
monitorable = false
script = ExtResource("1_m28pn")
good_file = ExtResource("2_1a8uc")
bad_file = ExtResource("3_hk41l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_s8q2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xg1se")

[node name="MoveableItem" parent="." instance=ExtResource("2_rpyni")]
process_mode = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="deleter" from="MoveableItem" to="." method="_on_moveable_item_deleter"]
[connection signal="empty" from="MoveableItem" to="." method="_on_moveable_item_empty"]
[connection signal="output" from="MoveableItem" to="." method="_on_moveable_item_output"]
[connection signal="server" from="MoveableItem" to="." method="_on_moveable_item_server"]
[connection signal="storage" from="MoveableItem" to="." method="_on_moveable_item_storage"]
